force-app/main/default/objects/Opportunity/fields/AccountCategory__c.field-meta.xml
<CustomField>
    <fullName>AccountCategory__c</fullName>
    <label>AccountCategory</label>
    <length>20</length>
    <type>Text</type>
</CustomField>