force-app/main/default/objects/Opportunity/fields/ActualTotalInternalCost__c.field-meta.xml
<CustomField>
    <fullName>ActualTotalInternalCost__c</fullName>
    <label>Actual Total Internal Cost</label>
    <summarizedField>Project_Status__c.AmountProjectSummApp__c</summarizedField>
    <summaryForeignKey>Project_Status__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>