force-app/main/default/objects/Opportunity/fields/ActualTradingProfit__c.field-meta.xml
<CustomField>
    <fullName>ActualTradingProfit__c</fullName>
    <formula>Amount - ActualTotalInternalCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Trading Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>