force-app/main/default/objects/Opportunity/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>flag su Opportunity  per identificare le attività che generano un profitto e quelle che invece sono di puro costo</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>