force-app/main/default/objects/Opportunity/fields/BillingOpportunityRefN__c.field-meta.xml
<CustomField>
    <fullName>BillingOpportunityRefN__c</fullName>
    <formula>BillingOpportunity__r.ReferenceNumber__c</formula>
    <label>Billing Opportunity Ref N°</label>
    <type>Text</type>
</CustomField>