force-app/main/default/objects/Opportunity/fields/BusinessLine__c.field-meta.xml
<CustomField>
    <fullName>BusinessLine__c</fullName>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Software Development &amp; Solutions</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Infrastructure &amp; IT Services</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Management Consulting &amp; Advisory</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Back Office</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>