force-app/main/default/objects/Opportunity/fields/BusinessManager__c.field-meta.xml
<CustomField>
    <fullName>BusinessManager__c</fullName>
    <label>Business Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flavia Dall&apos;Ora</fullName>
            </value>
            <value>
                <fullName>Francesco Veropalumbo</fullName>
            </value>
            <value>
                <fullName>Fulvio Vanacore</fullName>
            </value>
            <value>
                <fullName>Giovanni Costagliola</fullName>
            </value>
            <value>
                <fullName>Giuseppe Maiorano</fullName>
            </value>
            <value>
                <fullName>Massimo Colombo</fullName>
            </value>
            <value>
                <fullName>Roberto De Simone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>