force-app/main/default/objects/Opportunity/fields/Codice_Commessa__c.field-meta.xml
<CustomField>
    <fullName>Codice_Commessa__c</fullName>
    <label>Codice Commessa</label>
    <length>25</length>
    <type>Text</type>
</CustomField>