force-app/main/default/objects/Opportunity/fields/CompanyAcronim__c.field-meta.xml
<CustomField>
    <fullName>CompanyAcronim__c</fullName>
    <formula>LEFT(Reference_Number__c, FIND(&apos;-&apos;,Reference_Number__c)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompanyAcronim</label>
    <type>Text</type>
</CustomField>