force-app/main/default/objects/Opportunity/fields/CompetenceCenter__c.field-meta.xml
<CustomField>
    <fullName>CompetenceCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Competence Center</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BusinessUnit__c.CompetenceCenter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BusinessUnit__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>