force-app/main/default/objects/Opportunity/fields/CostoAttesoRimanente__c.field-meta.xml
<CustomField>
    <fullName>CostoAttesoRimanente__c</fullName>
    <formula>Stima_a_terminare_gg__c * (  ActualTotalInternalCost__c /  Time_Spent_gg__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo atteso rimanente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>