force-app/main/default/objects/Opportunity/fields/CustomerTechnicalReferent__c.field-meta.xml
<CustomField>
    <fullName>CustomerTechnicalReferent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Technical Referent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Il customer Tecnical Referent deve essere un contatto dell&apos;account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Customer Technical Referent)</relationshipLabel>
    <relationshipName>OpportunitiesReferent</relationshipName>
    <type>Lookup</type>
</CustomField>