force-app/main/default/objects/Opportunity/fields/Delivery_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>NexusAT</value>
        </filterItems>
        <filterItems>
            <field>Contact.Roles__c</field>
            <operation>equals</operation>
            <value>Project Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>