force-app/main/default/objects/Opportunity/fields/ExpectedCost__c.field-meta.xml
<CustomField>
    <fullName>ExpectedCost__c</fullName>
    <formula>ActualTotalInternalCost__c +  RemainingExpectedCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>