force-app/main/default/objects/Opportunity/fields/ExpectedMargin__c.field-meta.xml
<CustomField>
    <fullName>ExpectedMargin__c</fullName>
    <formula>ExpectedTradingProfit__c /  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>