force-app/main/default/objects/Opportunity/fields/ExpectedTradingProfit__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTradingProfit__c</fullName>
    <formula>Amount  -  ExpectedCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Trading Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>