force-app/main/default/objects/Opportunity/fields/Fatturato_al_cliente__c.field-meta.xml
<CustomField>
    <fullName>Fatturato_al_cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fatturato al cliente</label>
    <type>Checkbox</type>
</CustomField>