force-app/main/default/objects/Opportunity/fields/Fatturato_Da_Pianificare__c.field-meta.xml
<CustomField>
    <fullName>Fatturato_Da_Pianificare__c</fullName>
    <description>Gap tra l&apos;ammontare dell&apos;Opportunità e il totale dell&apos;ammontare delle invoice milestone collegate.</description>
    <formula>Amount - (Totale_Saldato__c + Totale_Fatture_Inviate__c +  Totale_Draft__c +  Totale_Da_Fatturare__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gap tra l&apos;ammontare dell&apos;Opportunità e il totale dell&apos;ammontare delle invoice milestone collegate.</inlineHelpText>
    <label>Fatturato Da Pianificare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>