force-app/main/default/objects/Opportunity/fields/Fatturazione__c.field-meta.xml
<CustomField>
    <fullName>Fatturazione__c</fullName>
    <label>Fatturazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipi_di_Fatturazioni</valueSetName>
    </valueSet>
</CustomField>