force-app/main/default/objects/Opportunity/fields/GapIndicator__c.field-meta.xml
<CustomField>
    <fullName>GapIndicator__c</fullName>
    <description>Graphic indicator of turnover to plan (Green if the gap is 0, Yellow if there are missing invoices, Red if there are excess invoices)</description>
    <formula>IMAGE( 
	IF(  RevenueToPlan__c &gt; 0 , 
		&quot;/resource/red&quot;,  
			IF( RevenueToPlan__c &lt; 0 , 
				&quot;/resource/yellow&quot;,  
					IF( RevenueToPlan__c = 0, 
						&quot;/resource/green&quot;, &quot;&quot;) ) ) , 
&apos;Indicator&apos; , 20, 20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green: regular situation.
Yellow: excess invoices.
Red: missing invoices.</inlineHelpText>
    <label>Gap Indicator</label>
    <type>Text</type>
</CustomField>