force-app/main/default/objects/Opportunity/fields/Giorni_Uomo__c.field-meta.xml
<CustomField>
    <fullName>Giorni_Uomo__c</fullName>
    <label>Giorni Uomo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>