force-app/main/default/objects/Opportunity/fields/Gross_Margin_New__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_New__c</fullName>
    <formula>Trading_Profit__c  /   Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin q</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>