force-app/main/default/objects/Opportunity/fields/GrossMargin__c.field-meta.xml
<CustomField>
    <fullName>GrossMargin__c</fullName>
    <formula>TradingProfit__c / Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>