force-app/main/default/objects/Opportunity/fields/Indicatore_Gap__c.field-meta.xml
<CustomField>
    <fullName>Indicatore_Gap__c</fullName>
    <description>indicatore grafico del fatturato da pianificare (Verde se il gap è 0, Giallo se mancano delle fatture, Rosso se ci sono fatture in eccesso)</description>
    <formula>IMAGE( 
	IF(  Fatturato_Da_Pianificare__c &gt; 0 , 
		&quot;https://nexusat--c.eu17.visual.force.com/resource/1489804808000/red?&quot;,  
			IF( Fatturato_Da_Pianificare__c &lt; 0 , 
				&quot;https://nexusat--c.eu17.visual.force.com/resource/1489804808000/yellow?&quot;,  
					IF( Fatturato_Da_Pianificare__c = 0, 
						&quot;https://nexusat--c.eu17.visual.force.com/resource/1572355500000/green&quot;, &quot;&quot;) ) ) , 
&apos;Indicator&apos; , 20, 20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verde: situazione regolare.
Rosso: fatture mancanti.
Giallo: fatture in eccesso.</inlineHelpText>
    <label>Indicatore Gap</label>
    <type>Text</type>
</CustomField>