force-app/main/default/objects/Opportunity/fields/IntragroupProjects__c.field-meta.xml
<CustomField>
    <fullName>IntragroupProjects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intragroup Projects</label>
    <type>Checkbox</type>
</CustomField>