force-app/main/default/objects/Opportunity/fields/IntranetCost__c.field-meta.xml
<CustomField>
    <fullName>IntranetCost__c</fullName>
    <label>Intranet Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>