force-app/main/default/objects/Opportunity/fields/InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmount__c</fullName>
    <label>InvoiceAmount</label>
    <summarizedField>InvoiceMilestone__c.Amount__c</summarizedField>
    <summaryForeignKey>InvoiceMilestone__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>