force-app/main/default/objects/Opportunity/fields/Is_Delivery_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Delivery_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Delivery Required?</label>
    <type>Checkbox</type>
</CustomField>