force-app/main/default/objects/Opportunity/fields/IsDeliveryRequired__c.field-meta.xml
<CustomField>
    <fullName>IsDeliveryRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Delivery Required?</label>
    <type>Checkbox</type>
</CustomField>