force-app/main/default/objects/Opportunity/fields/IT_Service__c.field-meta.xml
<CustomField>
    <fullName>IT_Service__c</fullName>
    <label>IT Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11901</fullName>
                <label>IT Operations Service</label>
            </value>
            <value>
                <fullName>11902</fullName>
                <label>Web Application</label>
            </value>
            <value>
                <fullName>11903</fullName>
                <label>Mobile Application</label>
            </value>
            <value>
                <fullName>11905</fullName>
                <label>Consultance Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>