force-app/main/default/objects/Opportunity/fields/ITService__c.field-meta.xml
<CustomField>
    <fullName>ITService__c</fullName>
    <label>ITService</label>
    <length>30</length>
    <type>Text</type>
</CustomField>