force-app/main/default/objects/Opportunity/fields/ManDays__c.field-meta.xml
<CustomField>
    <fullName>ManDays__c</fullName>
    <label>Man Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>