force-app/main/default/objects/Opportunity/fields/Numero_Ordine_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Numero_Ordine_del_Cliente__c</fullName>
    <label>Numero Ordine del Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>