force-app/main/default/objects/Opportunity/fields/OM_Offerta_Master__c.field-meta.xml
<CustomField>
    <fullName>OM_Offerta_Master__c</fullName>
    <label>OM – Offerta Master</label>
    <length>25</length>
    <type>Text</type>
</CustomField>