force-app/main/default/objects/Opportunity/fields/OMMasterOffer__c.field-meta.xml
<CustomField>
    <fullName>OMMasterOffer__c</fullName>
    <label>OM - Master Offer</label>
    <length>25</length>
    <type>Text</type>
</CustomField>