force-app/main/default/objects/Opportunity/fields/Opportunit_di_fatturazione_Ref_N__c.field-meta.xml
<CustomField>
    <fullName>Opportunit_di_fatturazione_Ref_N__c</fullName>
    <formula>Opportunita_di_fatturazione__r.Reference_Number__c</formula>
    <label>Opportunità di fatturazione Ref N°</label>
    <type>Text</type>
</CustomField>