force-app/main/default/objects/Opportunity/fields/OrderCode__c.field-meta.xml
<CustomField>
    <fullName>OrderCode__c</fullName>
    <label>Order Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>