force-app/main/default/objects/Opportunity/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Type</label>
    <referenceTo>PaymentType__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>