force-app/main/default/objects/Opportunity/fields/postServiceDesk__c.field-meta.xml
<CustomField>
    <fullName>postServiceDesk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>postServiceDesk</label>
    <type>Checkbox</type>
</CustomField>