force-app/main/default/objects/Opportunity/fields/ProductionOrder__c.field-meta.xml
<CustomField>
    <fullName>ProductionOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Order</label>
    <referenceTo>Production_Order__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>