force-app/main/default/objects/Opportunity/fields/ReasonWonLost__c.field-meta.xml
<CustomField>
    <fullName>ReasonWonLost__c</fullName>
    <label>Reason Won/Lost</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Relationship</fullName>
            </value>
            <value>
                <fullName>Proposed Solution</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Poor qualification</fullName>
            </value>
            <value>
                <fullName>Il Cliente ha deciso di non adottare un CRM.</fullName>
            </value>
            <value>
                <fullName>Il Cliente ha scelto un altro CRM.</fullName>
            </value>
            <value>
                <fullName>Il Cliente non ha il budget.</fullName>
            </value>
            <value>
                <fullName>Il Cliente vuole riparlarne tra 1 anno.</fullName>
            </value>
            <value>
                <fullName>Il Cliente non ha il budget per i Servizi Professionali NexusAT.</fullName>
            </value>
            <value>
                <fullName>Al Cliente è piaciuto il progetto.</fullName>
            </value>
            <value>
                <fullName>Al Cliente è piaciuto il prezzo.</fullName>
            </value>
            <value>
                <fullName>Il Cliente vuole SFDC.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>