force-app/main/default/objects/Opportunity/fields/RemainingExpectedCost__c.field-meta.xml
<CustomField>
    <fullName>RemainingExpectedCost__c</fullName>
    <formula>SumEstimateToFinishDD__c * (  ActualTotalInternalCost__c /  SumTimeSpentDD__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Expected Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>