force-app/main/default/objects/Opportunity/fields/RevenueToPlan__c.field-meta.xml
<CustomField>
    <fullName>RevenueToPlan__c</fullName>
    <formula>Amount - (TotalSettled__c + TotalSentInvoices__c +  TotalInDraft__c +  TotalToBeInvoiced__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gap between the amount of the Opportunity and the total amount of the linked Invoice Milestones</inlineHelpText>
    <label>Revenue To Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>