force-app/main/default/objects/Opportunity/fields/Risk_Level_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level_Description__c</fullName>
    <label>Risk Level Description</label>
    <type>TextArea</type>
</CustomField>