force-app/main/default/objects/Opportunity/fields/Service_Desk__c.field-meta.xml
<CustomField>
    <fullName>Service_Desk__c</fullName>
    <label>Service Desk</label>
    <type>Url</type>
</CustomField>