force-app/main/default/objects/Opportunity/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>PRJ</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>